add config compose